syntax = "proto3";

package yandex.cloud.loadtesting.api.v1.config;
option java_package = "yandex.cloud.api.loadtesting.api.v1.config";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/yandex-cloud/go-genproto/yandex/cloud/loadtesting/api/v1/config;config";

// Test config.
message Config {
  // ID of the test config. Generated at creation time.
  string id = 1;

  // ID of the folder that the config belongs to.
  string folder_id = 2;

  // Config content in YAML format.
  string yaml_string = 3;
  
  reserved 4 to 9;
  
  // Name of the config.
  string name = 10;
  
  // Creation timestamp.
  google.protobuf.Timestamp created_at = 11;
  
  // UA or SA that created the config.
  string created_by = 12;
}
